--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
  <div class="my-3 py-3">
    <h2 class="display-5">Turn-key Painter?</h2>
    <p class="lead">We've been looking for you.</p>
-   <a class="btn btn-outline-light text-white" href="mailto:justin@slocumpainting.com?subject=Seeking%20Employment&body=Name:%0D%0APhone#:%0D%0AYears%20Experience:">Come Work For Us</a>
+   <a class="btn btn-outline-light text-white" href="mailto:justin@slocumpainting.com?subject=Seeking%20Employment&body=Name:%0D%0APhone#:%0D%0AYears%20Experience:">Work For Us</a>
  </div>
 </div>
 
  <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
  <div class="my-3 py-3">
    <h2 class="display-5">Still not convinced?</h2>
-   <p class="lead">Take a look.<br/>You will be.</p>
-   <a class="btn btn-outline-light" href="#album" style="color:white;">Trust Your Own Eyes</a>
+   <p class="lead">You will be.</p>
+   <a class="btn btn-outline-light" href="#album" style="color:white;">Take A Look</a>
  </div>
 </div>
 </div>
