--- a/index.html
+++ b/index.html
@@ -136,6 +136,74 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+          <img class="card-img-top" src="https://slocumpainting.github.io/img%20(21).JPG" alt="Card image cap">
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+          <img class="card-img-top" src="https://slocumpainting.github.io/img%20(22).JPG" alt="Card image cap">
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+          <img class="card-img-top" src="https://slocumpainting.github.io/img%20(23).JPG" alt="Card image cap">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+          <img class="card-img-top" src="https://slocumpainting.github.io/img%20(24).JPG" alt="Card image cap">
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+          <img class="card-img-top" src="https://slocumpainting.github.io/img%20(25).JPG" alt="Card image cap">
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+          <img class="card-img-top" src="https://slocumpainting.github.io/img%20(27).JPG" alt="Card image cap">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+          <img class="card-img-top" src="https://slocumpainting.github.io/img%20(28).JPG" alt="Card image cap">
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+          <img class="card-img-top" src="https://slocumpainting.github.io/img%20(29).JPG" alt="Card image cap">
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+          <img class="card-img-top" src="https://slocumpainting.github.io/img%20(30).JPG" alt="Card image cap">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+          <img class="card-img-top" src="https://slocumpainting.github.io/img%20(26).JPG" alt="Card image cap">
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+          <img class="card-img-top" src="https://slocumpainting.github.io/img%20(31).JPG" alt="Card image cap">
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+          <img class="card-img-top" src="https://slocumpainting.github.io/img%20(20).JPG" alt="Card image cap">
+        </div>
+      </div>
+    </div>
   </div>  
 </div>
 
