--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     
 <nav class="site-header sticky-top" style="text-align:center ; vertical-align:bottom ; background-color:white;">
   <div display: inline-block>
-    <img src="https://slocumpainting.github.io/SlocumPaintingLogoTransp.png" height="96" width="252" style="vertical-align:middle">
+    <img src="https://slocumpainting.github.io/SlocumPaintingLogoTransp.png" height="192" width="504" style="vertical-align:middle">
   </div>
 </nav>
 
-<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-info">
   <div class="col-md-5 p-lg-5 mx-auto my-5">
-    <h1 class="display-4 font-weight-normal">Need a painter?</h1>
+    <h2 class="display-4 font-weight-normal">Need a painter?</h2>
     <p class="lead font-weight-normal">Let us show you the Slocum Painting difference.</p>
     <a class="btn btn-outline-secondary" href="mailto:justin@slocumpainting.com?subject=Seeking%20Estimate&body=Name:%0D%0APhone#:%0D%0AAddress:%0D%0ACity,State,Zip:%0D%0AYear%20structure%20built:%0D%0AYear%20last%20painted:%0D%0AProject%20Description:%0D%0A%0D%0A%0D%0A">Get An Estimate</a>
   </div>
