--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
+        <img src="https://slocumpainting.github.io/carouselImage0.png"></img>
         <div class="container">
           <div class="carousel-caption text-left">
             <h1>Example headline.</h1>
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
+        <img src="https://slocumpainting.github.io/carouselImage1.png"></img>        
         <div class="container">
           <div class="carousel-caption">
             <h1>Another example headline.</h1>
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
+        <img src="https://slocumpainting.github.io/carouselImage2.png"></img>
         <div class="container">
           <div class="carousel-caption text-right">
             <h1>One more for good measure.</h1>
