--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <main role="main">
 
-  <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: auto;">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -64,7 +64,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://slocumpainting.github.io/carouselImage0.png" ></img>
+        <img src="https://slocumpainting.github.io/carouselImage0.png" style="object-fit: cover;"></img>
         <div class="container">
           <div class="carousel-caption text-left">
             <h1>Example headline.</h1>
