--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://slocumpainting.github.io/carouselImage1.png"></img>        
+        <img src="https://slocumpainting.github.io/carouselImage1.png" style="object-fit: cover;></img>        
         <div class="container">
           <div class="carousel-caption">
             <h1>Another example headline.</h1>
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://slocumpainting.github.io/carouselImage2.png"></img>
+        <img src="https://slocumpainting.github.io/carouselImage2.png" style="object-fit: cover;></img>
         <div class="container">
           <div class="carousel-caption text-right">
             <h1>One more for good measure.</h1>
