--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 <script>
   $(document).ready(function() {
     $(window).scroll(function() {
-      alert("scrolling");
+      //alert("scrolling");
        if($(this).scrollTop() > height) { 
          alert("if");
            $("#navbar").addClass('scrolled');
