--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
   $(document).ready(function() {
     $(window).scroll(function() {
       //alert("scrolling");
+      alert($(window).scrollY);
       if($(window).scrollY==0){
  alert("user scrolled to the top of the page");
 }
