--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body><br/>
   
  <header>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" id="navbar" background="none">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" id="navbar" style="background:none;">
     <a class="navbar-brand" href="#">Carousel</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
