--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
    <p>Roll on the floor purring your whiskers off intrigued by the shower burrow under covers, and play time, rub face on everything, intently sniff hand, or pelt around the house and up and down stairs chasing phantoms. Attack feet. Damn that dog shake treat bag under the bed drink water out of the faucet for lick butt love to play with owner's hair tie. Swat at dog give attitude.</p>
 </div>
   
- <header>
+ <!--header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" id="navbar" style="background:none;">
     <a class="navbar-brand" href="#">Carousel</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -236,7 +236,7 @@
       </form>
     </div>
   </nav>
-</header>
+</header-->
 
 <main role="main">
 
