--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
 
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="https://slocumpainting.github.io/style.css">
 
   
 </head>
@@ -70,7 +70,7 @@
 
   
 
-    <script  src="js/index.js"></script>
+    <script  src="https://slocumpainting.github.io/index.js"></script>
 
 
 
