--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Transparent to Solid Nav</a>
+          <a class="navbar-brand" href="#">Transparent to Solid Nav Test 0</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
