--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Transparent to Solid navbar</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+  <link rel='stylesheet' href='https://slocumpainting.github.io/bootstrap.min.css'>
+  <!--https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css-->
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="https://slocumpainting.github.io/style.css">  
 </head>
