--- a/indexOld.html
+++ b/indexOld.html
@@ -11,7 +11,7 @@
 <!--link href="https://slocumpainting.github.io/bootstrap.min.css" rel="stylesheet"-->
  <style>
    .image {
-   background-color: #490D40;
+   background-color: #FFFFFF;
    background: url(https://sonorangirl.github.io/Earth-Quotes/img/google-earth-view-South-Iceland3.jpg) no-repeat center center;
    background-size: cover;
    height: 570px;
