--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Transparent to Solid navbar</title>
+  <title>Slocum Painting Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet' href='https://slocumpainting.github.io/bootstrapTranspNavbar.css'>
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="https://slocumpainting.github.io/style.css">  
+  <link rel="apple-touch-icon" sizes="180x180" href="https://slocumpainting.github.io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://slocumpainting.github.io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://slocumpainting.github.io/favicon-16x16.png">
+  <link rel="manifest" href="https://slocumpainting.github.io/site.webmanifest">
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
