--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Slocum Painting Test 3</a>
+          <a class="navbar-brand" href="#">Slocum Painting</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">About Test 3</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Another Link</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Career Opportunities</a></li>
+            <li><a href="#">Get An Estimate</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
