--- a/indexOld.html
+++ b/indexOld.html
@@ -24,7 +24,7 @@
     }
   }
 </style>
-<!--link href="https://slocumpainting.github.io/product.css" rel="stylesheet"-->
+<link href="https://slocumpainting.github.io/product.css" rel="stylesheet">
 </head>
 <body><!--br/-->
   
