--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-
+<main role="main">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
