--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet' href='https://slocumpainting.github.io/bootstrapTranspNavbar.css'>
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
-  <link rel="stylesheet" href="https://slocumpainting.github.io/style.css">  
+  <link rel="stylesheet" href="https://slocumpainting.github.io/style.css">
+  <link href="https://slocumpainting.github.io/product.css" rel="stylesheet">
   <link rel="apple-touch-icon" sizes="180x180" href="https://slocumpainting.github.io/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="https://slocumpainting.github.io/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="https://slocumpainting.github.io/favicon-16x16.png">
@@ -81,7 +82,7 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
-  </div>   
+  </div>
   
 <div class="image">
    <h1 class="heading">Main Heading</h1>
