--- a/indexOld.html
+++ b/indexOld.html
@@ -56,7 +56,7 @@
   </nav>
 </header-->
 
-<main role="main">
+<!--main role="main"-->
 
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
