--- a/indexOld.html
+++ b/indexOld.html
@@ -26,10 +26,7 @@
 </style>
 <link href="https://slocumpainting.github.io/product.css" rel="stylesheet">
 </head>
-<body><!--br/-->
-  
-
-  
+<body>  
  <!--header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" id="navbar" style="background:none;">
     <a class="navbar-brand" href="#">Carousel</a>
@@ -55,9 +52,6 @@
     </div>
   </nav>
 </header-->
-
-<!--main role="main"-->
-
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -106,7 +100,7 @@
     </a>
   </div> 
     
-<nav class="site-header sticky-top" style="text-align:center ; vertical-align:bottom ; background-color:white;">
+<!--nav class="site-header sticky-top" style="text-align:center ; vertical-align:bottom ; background-color:white;">
   <div display: inline-block>
     <img src="https://slocumpainting.github.io/SlocumPaintingLogoTransp.png" height="192" width="504" style="vertical-align:middle">
   </div>
@@ -283,7 +277,7 @@
       </div>
     </div>
   </div>  
-</div>
+</div-->
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')
