--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel='stylesheet' href='https://slocumpainting.github.io/bootstrapTranspNavbar.css'>
   <link rel="stylesheet" href="https://slocumpainting.github.io/style.css">
   <link href="https://slocumpainting.github.io/product.css" rel="stylesheet">
-  <link href="https://slocumpainting.github.io/bootstrap.min.css" rel="stylesheet">
+  <!--link href="https://slocumpainting.github.io/bootstrap.min.css" rel="stylesheet"-->
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
