--- a/indexNew.html
+++ b/indexNew.html
@@ -40,7 +40,7 @@
 
         <div class="carousel-inner">
            <div class="item active">
-              <img src="images/image1.jpg" alt="" class="img-responsive">
+              <img src="https://slocumpainting.github.io/carouselImage0.png" alt="" class="img-responsive">
            </div>
            <div class="item">
               <img src="images/image2.jpg" alt="" class="img-responsive">
