--- a/indexNew.html
+++ b/indexNew.html
@@ -24,6 +24,26 @@
 <body>
   <div class="navbar-wrapper">
         <div class="navbar">
+            <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Slocum Painting IndexNew 0.00</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Career Opportunities</a></li>
+            <li><a href="#">Get An Estimate</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
         </div>   
     </div><!-- /navbar-wrapper -->
 
