--- a/indexNew.html
+++ b/indexNew.html
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Slocum Painting IndexNew 0.01</a>
+          <a class="navbar-brand" href="#">Slocum Painting IndexNew 0.02</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -61,17 +61,14 @@
 
         <div class="carousel-inner">
            <div class="item active">
-              <img src="https://slocumpainting.github.io/carouselImage0.png" alt="" class="img-responsive">
+              <img src="https://slocumpainting.github.io/carouselImage0.png" alt="" class="img-responsive" style="object-fit: cover;>
            </div>
            <div class="item">
-              <img src="images/image2.jpg" alt="" class="img-responsive">
+              <img src="https://slocumpainting.github.io/carouselImage1.png" alt="" class="img-responsive" style="object-fit: cover;>
            </div>
            <div class="item">
-              <img src="images/image3.jpg" alt="" class="img-responsive">
-           </div>
-           <div class="item">
-              <img src="images/image4.jpg" alt="" class="img-responsive">
-           </div>       
+              <img src="https://slocumpainting.github.io/carouselImage2.png" alt="" class="img-responsive" style="object-fit: cover;>
+           </div>     
         </div>
      </div><!-- /#carousel-generic -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
