--- a/indexNew.html
+++ b/indexNew.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" href="https://getbootstrap.com/docs/4.3/examples/carousel/carousel.css" crossorigin="anonymous">
+<!--link rel="stylesheet" href="https://getbootstrap.com/docs/4.3/examples/carousel/carousel.css" crossorigin="anonymous"-->
 <style>
 .navbar-wrapper {
     position:relative;
@@ -61,13 +61,13 @@
 
         <div class="carousel-inner">
            <div class="item active">
-              <img src="https://slocumpainting.github.io/carouselImage0.png" alt="" class="img-responsive" style="object-fit: cover;>
+              <img src="https://slocumpainting.github.io/carouselImage0.png" alt="" class="img-responsive" style="object-fit: cover;">
            </div>
            <div class="item">
-              <img src="https://slocumpainting.github.io/carouselImage1.png" alt="" class="img-responsive" style="object-fit: cover;>
+              <img src="https://slocumpainting.github.io/carouselImage1.png" alt="" class="img-responsive" style="object-fit: cover;">
            </div>
            <div class="item">
-              <img src="https://slocumpainting.github.io/carouselImage2.png" alt="" class="img-responsive" style="object-fit: cover;>
+              <img src="https://slocumpainting.github.io/carouselImage2.png" alt="" class="img-responsive" style="object-fit: cover;">
            </div>     
         </div>
      </div><!-- /#carousel-generic -->
