--- a/indexNew.html
+++ b/indexNew.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<!--link rel="stylesheet" href="https://getbootstrap.com/docs/4.3/examples/carousel/carousel.css" crossorigin="anonymous"-->
+<link rel="stylesheet" href="https://getbootstrap.com/docs/4.3/examples/carousel/carousel.css" crossorigin="anonymous">
 <style>
 .navbar-wrapper {
     position:relative;
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Slocum Painting IndexNew 0.03</a>
+          <a class="navbar-brand" href="#">Slocum Painting IndexNew 0.04</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
